crates/aranya-policy-compiler/tests/data/type_errors/no_member_invalid_type.fail.policy
struct Foo {}
function g(x struct Foo) bool {
    return x.y
}
